--- a/Views/Chart/PolarRadarSpline.cshtml
+++ b/Views/Chart/PolarRadarSpline.cshtml
@@ -130,11 +130,11 @@
 }
 @section Description{
     <p>
-    In this example, you can see how to render and configure the spline type charts. Spline chart connects each point in series
-    through a curved line. You can use <code>dashArray</code>, <code>width</code>, and <code>fill</code> properties
-    to customize the spline. <code>marker</code> and <code>dataLabel</code> are used to represent individual data and
-    its value.
-</p>
+        In this example, you can see how to render and configure the spline type charts. Spline chart connects each point in series
+        through a curved line. You can use <code>DashArray</code>, <code>Width</code>, and <code>Fill</code> properties
+        to customize the spline. <code>Marker</code> and <code>DataLabel</code> are used to represent individual data and
+        its value.
+    </p>
 <p>
     Tooltip is enabled in this example. To see the tooltip in action, hover a point or tap on a point in touch enabled devices.
 </p>
