--- a/Views/Diagram/Nodes.cshtml
+++ b/Views/Diagram/Nodes.cshtml
@@ -87,6 +87,8 @@
     <script>
         function getNodeDefaults(node, diagram) {
             node.shape = { shape: 'Ellipse' };
+            node.height = 100;
+            node.width = 100;
             node.style = { fill: '#37909A', strokeColor: '#024249' };
             return node;
         }
