--- a/Views/Sparkline/Rangeband.cshtml
+++ b/Views/Sparkline/Rangeband.cshtml
@@ -110,7 +110,7 @@
                         load: function (args) {
                             var theme = location.hash.split('/')[1];
                             theme = theme ? theme : 'Material';
-                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1));
+                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1).replace(/-dark/i, 'Dark').replace(/contrast/i, 'Contrast'));
                         },
                         height: '50px',
                         width: '150px',
@@ -130,7 +130,7 @@
                         load: function (args) {
                             var theme = location.hash.split('/')[1];
                             theme = theme ? theme : 'Material';
-                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1));
+                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1).replace(/-dark/i, 'Dark').replace(/contrast/i, 'Contrast'));
                         },
                         height: '50px',
                         width: '150px',
