--- a/Views/Tooltip/Menu.cshtml
+++ b/Views/Tooltip/Menu.cshtml
@@ -6,7 +6,7 @@
         <div id="Tooltip">
             <div class="toolbarContainer">
                 <!-- Toolbar element -->
-                @Html.EJS().Tooltip("tooltip").Target("#Toolbar [title]").Created("onCreated").Width("170").BeforeRender("onBeforeRender").CssClass("e-settings").OpensOn("Click").ContentTemplate(@<div>
+                @Html.EJS().Tooltip("tooltip").Target("#Toolbar [title]").Created("onCreated").Width("170").Position(Syncfusion.EJ2.Popups.Position.BottomCenter).WindowCollision(true).BeforeRender("onBeforeRender").CssClass("e-settings").OpensOn("Click").ContentTemplate(@<div>
                     @Html.EJS().Toolbar("Toolbar").Items(ViewBag.popupItems).Render()
                 </div>).Render()
             </div>
