--- a/Views/Chart/DataLabelTemplate.cshtml
+++ b/Views/Chart/DataLabelTemplate.cshtml
@@ -342,7 +342,7 @@
 }
 @section Description{
     <p>
-        The ASP.NET MVC Charts data label template feature allows you to change the appearance and behavior of the data label for each data point using the <a target="_blank" href="https://ej2.syncfusion.com/aspnetmvc/documentation/chart/data-labels#data-label-template">Template</a> property in <a target="_blank" href="https://ej2.syncfusion.com/aspnetmvc/documentation/chart/data-labels">ChartDataLabel</a>.
+        The ASP.NET MVC Charts data label template feature allows you to change the appearance and behavior of the data label for each data point using the <a target="_blank" href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Charts.ChartDataLabelSettings.html#Syncfusion_EJ2_Charts_ChartDataLabelSettings_Template">Template</a> property in <a target="_blank" href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Charts.ChartDataLabelSettings.html">ChartDataLabel</a>.
     </p>
     <p>
         More information on the data label template can be found in this
