--- a/Views/Diagram/Snapping.cshtml
+++ b/Views/Diagram/Snapping.cshtml
@@ -2,7 +2,7 @@
 @using Syncfusion.EJ2.Diagrams;
 @section ControlsSection{
 
-    <div class="col-lg-8 control-section" style="float: left;">
+    <div class="col-lg-8 control-section"  style="float: left;width:70%;">
         <div class="content-wrapper" style="width: 100%">
             @(Html.EJS().Diagram("diagram").Width("100%").Height("645px").Created("diagramCreated").SelectionChange("selectionChange").RotateChange("rotateChange").OnUserHandleMouseDown("userHandelClick")
         .RulerSettings(r => r.ShowRulers(true)).ContextMenuSettings(c => c.Show(true)).ScrollSettings(s => s.ScrollLimit(Syncfusion.EJ2.Diagrams.ScrollLimit.Infinity)).DrawingObject("Orthogonal").SelectedItems(ViewBag.selectedItems)
@@ -10,7 +10,7 @@
                 )
         </div>
     </div>
-    <div class="col-lg-4 property-section" style="float: right;">
+    <div class="col-lg-4 property-section" style="float: right; width: 30%;">
         <div id="properties_Container">
             <span class="property-panel-header">
                 Properties
@@ -18,27 +18,27 @@
             <div class="db-prop-row">
                 <div class="db-prop-text-style">
                     <span class="db-prop-text-style text-content">Snapping Interval</span>
-                    <div class="db-text-input" style="float: right;margin-right: 10px;">
-                        <input style="width: 150px;" id="snappingInterval" type="text" />
+                    <div class="db-text-input" style="float: right; margin-right: 10px; width: 150px;">
+                        @Html.EJS().NumericTextBox("snappingInterval").Format("n0").Value(20).Min(1).Step(1).Change("snappingInterval").Render()
                     </div>
                 </div>
                 <div class="db-prop-text-style">
                     <span class="db-prop-text-style text-content">Snapping Angle</span>
-                    <div class="db-text-input" style="float: right;margin-right: 10px;">
-                        <input style="width: 150px;" id="snappingAngle" type="text" />
+                    <div class="db-text-input" style="float: right; margin-right: 10px; width: 150px;">
+                        @Html.EJS().NumericTextBox("snappingAngle").Format("n0").Value(5).Min(1).Step(1).Change("snappingAngle").Render()
                     </div>
                 </div>
                 <div class="db-prop-text-style">
                     <span class="db-prop-text-style text-content">Snapping Line Color</span>
                     <div class="db-text-input" style="float: right;margin-right: 1px;">
-                        <input id="snappingLineColor" type="color" />
+                        @Html.EJS().ColorPicker("snappingLineColor").Value("#07EDE1").Mode(Syncfusion.EJ2.Inputs.ColorPickerMode.Palette).ShowButtons(false).Change("snappingLineColor").Render()
                     </div>
                 </div>
                 <div class="db-prop-text-style">
-                    <input type="checkbox" style="margin-left: 10px;" id="showGridlines" />
+                    @Html.EJS().CheckBox("showGridlines").Change("showGridlines").Checked(true).Label("Show Gridline").Render()
                 </div>
                 <div class="db-prop-text-style" style="margin-top: 7px!important;">
-                    <input type="checkbox" style="margin-left: 10px;" id="snapToObject" />
+                    @Html.EJS().CheckBox("snapToObject").Change("snapToObject").Checked(true).Label("Snapping To Objects").Render()
                 </div>
 
                 <div class="db-prop-text-style">
@@ -46,16 +46,16 @@
                 </div>
 
                 <div class="row radio-text-style" style="margin-left: 7px;">
-                    <input id="radio1" type="radio">
+                    @Html.EJS().RadioButton("radio1").Label("Snap To Gridlines").Name("snapToLines").Value("Snap To Gridlines").Checked(true).Change("snapToLines").Render()
                 </div>
                 <div class="row radio-text-style" style="margin-left: 7px;">
-                    <input id="radio2" type="radio">
+                    @Html.EJS().RadioButton("radio2").Label("Snap To Horizontal Gridlines").Name("snapToLines").Value("Snap To Horizontal Gridlines").Change("snapToLines").Render()
                 </div>
                 <div class="row radio-text-style" style="margin-left: 7px;">
-                    <input id="radio3" type="radio">
+                    @Html.EJS().RadioButton("radio3").Label("Snap To Vertical Gridlines").Name("snapToLines").Value("Snap To Vertical Gridlines").Change("snapToLines").Render()
                 </div>
                 <div class="row radio-text-style" style="margin-left: 7px;">
-                    <input id="radio4" type="radio">
+                    @Html.EJS().RadioButton("radio4").Label("None").Name("snapToLines").Value("None").Change("snapToLines").Render()
                 </div>
             </div>
         </div>
@@ -146,6 +146,10 @@
 
         .e-colorpicker-wrapper .e-split-btn-wrapper .e-split-colorpicker.e-split-btn {
             width: 110px !important;
+        }
+
+        .e-colorpicker-wrapper {
+            margin-right: 10px
         }
     </style>
 
@@ -238,86 +242,42 @@
             }
         }
 
-        var snappingInterval = new ej.inputs.NumericTextBox({
-            min: 1,
-            step: 1,
-            width: 150,
-            value: 20,
-            format: 'n0',
-            change: function (args) {
-                var diagram = document.getElementById("diagram").ej2_instances[0];
-                diagram.snapSettings.horizontalGridlines.snapIntervals[0] = args.value;
-                diagram.snapSettings.verticalGridlines.snapIntervals[0] = args.value;
-                diagram.snapSettings.horizontalGridlines.scaledIntervals[0] = args.value;
-                diagram.snapSettings.verticalGridlines.scaledIntervals[0] = args.value;
-                diagram.dataBind();
-            }
-        });
-        snappingInterval.appendTo('#snappingInterval');
+        function snappingInterval(args) {
+            var diagram = document.getElementById("diagram").ej2_instances[0];
+            diagram.snapSettings.horizontalGridlines.snapIntervals[0] = args.value;
+            diagram.snapSettings.verticalGridlines.snapIntervals[0] = args.value;
+            diagram.snapSettings.horizontalGridlines.scaledIntervals[0] = args.value;
+            diagram.snapSettings.verticalGridlines.scaledIntervals[0] = args.value;
+            diagram.dataBind();
+        }
+        function snappingAngle(args) {
+            var diagram = document.getElementById("diagram").ej2_instances[0];
+            diagram.snapSettings.snapAngle = args.value;
+            diagram.dataBind();
+        }
 
-        var snappingAngle = new ej.inputs.NumericTextBox({
-            min: 1,
-            step: 1,
-            value: 5,
-            format: 'n0',
-            change: function (args) {
-                var diagram = document.getElementById("diagram").ej2_instances[0];
-                diagram.snapSettings.snapAngle = args.value;
-                diagram.dataBind();
-            }
-        });
-        snappingAngle.appendTo('#snappingAngle');
-
-        var snappingLineColor = new ej.inputs.ColorPicker({
-            mode: 'Palette',
-            width: '100%',
-            height: 25,
-            showButtons: false,
-            value: '#07EDE1',
-            change: function (args) {
-                var diagram = document.getElementById("diagram").ej2_instances[0];
-                diagram.snapSettings.snapLineColor = args.value;
-                diagram.dataBind();
-            }
-        });
-        snappingLineColor.appendTo('#snappingLineColor');
-
-        var showGridlines = new ej.buttons.CheckBox({
-            label: 'Show Gridline', checked: true,
-            change: function (args) {
-                var diagram = document.getElementById("diagram").ej2_instances[0];
-                diagram.snapSettings.constraints = diagram.snapSettings.constraints ^ ej.diagrams.SnapConstraints.ShowLines;
-                diagram.dataBind();
-                scale();
-            }
-        });
-        showGridlines.appendTo('#showGridlines');
-
-        var snapToObject = new ej.buttons.CheckBox({
-            label: 'Snapping To Objects', checked: true,
-            change: function (args) {
-                var diagram = document.getElementById("diagram").ej2_instances[0];
-                diagram.snapSettings.constraints = diagram.snapSettings.constraints ^ ej.diagrams.SnapConstraints.SnapToObject;
-                diagram.dataBind();
-                scale();
-            }
-        });
-        snapToObject.appendTo('#snapToObject');
-
-        var radioButton = new ej.buttons.RadioButton({ label: 'Snap To Gridlines', name: 'snapToLines', value: 'Snap To Gridlines', checked: true, change: snapToLines });
-        radioButton.appendTo('#radio1');
-
-        var radioButton1 = new ej.buttons.RadioButton({ label: 'Snap To Horizontal Gridlines', name: 'snapToLines', value: 'Snap To Horizontal Gridlines', change: snapToLines });
-        radioButton1.appendTo('#radio2');
-
-        var radioButton2 = new ej.buttons.RadioButton({ label: 'Snap To Vertical Gridlines', name: 'snapToLines', value: 'Snap To Vertical Gridlines', change: snapToLines });
-        radioButton2.appendTo('#radio3');
-
-        var radioButton3 = new ej.buttons.RadioButton({ label: 'None', name: 'snapToLines', value: 'None', change: snapToLines });
-        radioButton3.appendTo('#radio4');
+        function snappingLineColor(args) {
+            var diagram = document.getElementById("diagram").ej2_instances[0];
+            diagram.snapSettings.snapLineColor = args.value;
+            diagram.dataBind();
+        }
+        
+        function showGridlines(args) {
+            var diagram = document.getElementById("diagram").ej2_instances[0];
+            diagram.snapSettings.constraints = diagram.snapSettings.constraints ^ ej.diagrams.SnapConstraints.ShowLines;
+            diagram.dataBind();
+            scale();
+        }
+        function snapToObject(args) {
+            var diagram = document.getElementById("diagram").ej2_instances[0];
+            diagram.snapSettings.constraints = diagram.snapSettings.constraints ^ ej.diagrams.SnapConstraints.SnapToObject;
+            diagram.dataBind();
+            scale();
+        }
 
         function snapToLines(args) {
             var diagram = document.getElementById("diagram").ej2_instances[0];
+            var showGridlines = document.getElementById("showGridlines").ej2_instances[0];
             if (showGridlines.checked && snapToObject.checked) {
                 diagram.snapSettings.constraints = ej.diagrams.SnapConstraints.All;
             }
