--- a/Views/ProgressBar/Radius.cshtml
+++ b/Views/ProgressBar/Radius.cshtml
@@ -80,11 +80,11 @@
                     args.progressBar.annotations[0].content = '<div id="point1" style="font-size:24px;font-weight:bold;color:#e91e63"><span></span></div>';
                     break;
                 case 'fabric':
-                    args.progressBar.trackColor = '#0078D6';
+                    args.progressBar.progressColor = '#0078D6';
                     args.progressBar.annotations[0].content = '<div id="point1" style="font-size:24px;font-weight:bold;color:#0078D6"><span></span></div>';
                     break;
                 case 'bootstrap':
-                    args.progressBar.trackColor = '#317ab9';
+                    args.progressBar.progressColor = '#317ab9';
                     args.progressBar.annotations[0].content = '<div id="point1" style="font-size:24px;font-weight:bold;color:#317ab9"><span></span></div>';
                     break;
                 case 'tailwind':
@@ -111,14 +111,10 @@
                     break;
                 case 'bootstrap5':
                 case 'bootstrap5-dark':
-                    args.progressBar.progressColor = '#0D6EFD';
-                    break;
                 case 'fluent':
-                    args.progressBar.progressColor = '#0D6EFD';
-                    args.progressBar.annotations[0].content = '<div id="point1" style="font-size:24px;font-weight:bold;color:#0D6EFD"><span></span></div>';
-                    break;
                 case 'fluent-dark':
                     args.progressBar.progressColor = '#0D6EFD';
+                    args.progressBar.annotations[0].content = '<div id="point1" style="font-size:24px;font-weight:bold;color:#0D6EFD"><span></span></div>';
                     break;
                 case 'material3':
                     args.progressBar.progressColor = '#6750A4';
@@ -129,7 +125,7 @@
                     args.progressBar.annotations[0].content = '<div id="point1" style="font-size:24px;font-weight:bold;color:#D0BCFF"><span></span></div>';
                     break;
                 default:
-                    args.progressBar.trackColor = '#D0BCFF';
+                    args.progressBar.progressColor = '#D0BCFF';
                     args.progressBar.annotations[0].content = '<div id="point1" style="font-size:24px;font-weight:bold;color:#D0BCFF"><span></span></div>';
                     break;
             }
