--- a/Views/Sparkline/Customization.cshtml
+++ b/Views/Sparkline/Customization.cshtml
@@ -175,7 +175,7 @@
             percentage = args.sparkline;
             var theme = location.hash.split('/')[1];
             theme = theme ? theme : 'Material';
-            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1));
+            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1).replace(/-dark/i, 'Dark').replace(/contrast/i, 'Contrast'));
             args.sparkline.axisSettings.lineSettings.width = 2;
             args.sparkline.axisSettings.lineSettings.color = "red";
         }
@@ -183,7 +183,7 @@
             sales = args.sparkline;
             var theme = location.hash.split('/')[1];
             theme = theme ? theme : 'Material';
-            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1));
+            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1).replace(/-dark/i, 'Dark').replace(/contrast/i, 'Contrast'));
             args.sparkline.axisSettings.lineSettings.width = 2;
             args.sparkline.axisSettings.lineSettings.color = "red";
         }
