--- a/Views/Sparkline/Default.cshtml
+++ b/Views/Sparkline/Default.cshtml
@@ -302,7 +302,7 @@
         function sparkload(args) {
             var theme = location.hash.split('/')[1];
             theme = theme ? theme : 'Material';
-            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1));
+            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1).replace(/-dark/i, 'Dark').replace(/contrast/i, 'Contrast'));
         }
     </script>
 }
