--- a/Views/Sparkline/Layout.cshtml
+++ b/Views/Sparkline/Layout.cshtml
@@ -106,7 +106,7 @@
             }
             var theme = location.hash.split('/')[1];
             theme = theme ? theme : 'Material';
-            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1));
+            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1).replace(/-dark/i, 'Dark').replace(/contrast/i, 'Contrast'));
         }
     </script>
 }
