--- a/Views/Sparkline/Sparkgrid.cshtml
+++ b/Views/Sparkline/Sparkgrid.cshtml
@@ -41,7 +41,7 @@
                         load: function (args) {
                             var theme = location.hash.split('/')[1];
                             theme = theme ? theme : 'Material';
-                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1));
+                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1).replace(/-dark/i, 'Dark').replace(/contrast/i, 'Contrast'));
                         },
                         height: '50px',
                         width: '150px',
@@ -56,7 +56,7 @@
                         load: function (args) {
                             var theme = location.hash.split('/')[1];
                             theme = theme ? theme : 'Material';
-                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1));
+                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1).replace(/-dark/i, 'Dark').replace(/contrast/i, 'Contrast'));
                         },
                         height: '50px',
                         width: '150px',
@@ -72,7 +72,7 @@
                         load: function (args) {
                             var theme = location.hash.split('/')[1];
                             theme = theme ? theme : 'Material';
-                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1));
+                            args.sparkline.theme = (theme.charAt(0).toUpperCase() + theme.slice(1).replace(/-dark/i, 'Dark').replace(/contrast/i, 'Contrast'));
                         },
                         height: '50px',
                         width: '150px',
